--- a/app/src/main/res/layout/fragment_bulk_edit_hive.xml
+++ b/app/src/main/res/layout/fragment_bulk_edit_hive.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,37 +15,37 @@
             android:id="@+id/text_view_bulk_edit_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:text="@string/title_bulk_edit_hives"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:textColor="?android:attr/textColorPrimary"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_view_selected_hives_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textColor="?android:attr/textColorSecondary"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/text_view_bulk_edit_title"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_bulk_edit_title"
             tools:text="Editing 5 selected hives" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_hive_type"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_hive_type"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_view_selected_hives_count"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_hive_type"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_selected_hives_count">
 
             <AutoCompleteTextView
                 android:id="@+id/auto_complete_text_view_hive_type"
@@ -57,14 +56,14 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_frame_type"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_frame_type"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_type"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_frame_type"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_type">
 
             <AutoCompleteTextView
                 android:id="@+id/auto_complete_text_view_frame_type"
@@ -75,14 +74,14 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_number_of_frames"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_number_of_frames"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_frame_type"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_number_of_frames"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_frame_type">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_number_of_frames"
@@ -95,23 +94,23 @@
             android:id="@+id/checkbox_auto_number_hives_bulk"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/checkbox_auto_number_selected_hives"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_number_of_frames"
+            android:text="@string/checkbox_auto_number_selected_hives"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_number_of_frames" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_starting_hive_number_bulk"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_starting_hive_number"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/checkbox_auto_number_hives_bulk"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_starting_hive_number"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:visibility="gone">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/checkbox_auto_number_hives_bulk">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_starting_hive_number_bulk"
@@ -123,15 +122,15 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_ending_hive_number_bulk"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_ending_hive_number"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_starting_hive_number_bulk"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_ending_hive_number"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:visibility="gone">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_starting_hive_number_bulk">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_ending_hive_number_bulk"
@@ -145,12 +144,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="?attr/colorError"
             android:textAppearance="?attr/textAppearanceCaption"
+            android:textColor="?attr/colorError"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_ending_hive_number_bulk"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_ending_hive_number_bulk"
             tools:text="Calculated quantity (X) must match selected hives count (Y)"
             tools:visibility="visible" />
 
@@ -163,87 +162,87 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_breed"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/label_breed"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/barrier_bulk_hive_inputs"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/label_breed"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/barrier_bulk_hive_inputs">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
                 android:id="@+id/edit_text_breed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapWords" />
+                android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_hive_last_inspection_date"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_last_inspection_date_optional"
             android:layout_marginTop="16dp"
+            android:hint="@string/hint_last_inspection_date_optional"
             app:endIconDrawable="@drawable/ic_calendar"
             app:endIconMode="custom"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_breed"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_breed">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_hive_last_inspection_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="false"
                 android:clickable="true"
+                android:focusable="false"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_layout_hive_notes"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_notes_optional"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_last_inspection_date"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/hint_notes_optional"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_last_inspection_date">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_hive_notes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="top"
                 android:inputType="textMultiLine"
-                android:minLines="3"
-                android:gravity="top" />
+                android:minLines="3" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_save_bulk_edit"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/action_save"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/action_save"
             app:layout_constraintEnd_toStartOf="@id/button_cancel_bulk_edit"
-            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_cancel_bulk_edit"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/action_cancel"
-            android:layout_marginTop="32dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes"
-            app:layout_constraintStart_toEndOf="@id/button_save_bulk_edit"
+            android:layout_marginTop="32dp"
+            android:text="@string/action_cancel"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/Widget.MaterialComponents.Button.TextButton" />
+            app:layout_constraintStart_toEndOf="@id/button_save_bulk_edit"
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
